kubeconfig/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mon
---
apiVersion: v1
kind: Namespace
metadata:
  name: test
---
apiVersion: v1
kind: Namespace
metadata:
  name: prod
