kubeconfig/heapster-deployment-prd.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: heapster
  namespace: mon
  labels:
    app: heapster
    kubernetes.io/cluster-service: "true"
    version: v1.1.0
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: heapster
        version: v1.1.0
    spec:
      imagePullSecrets:
        - name: registrykey
      containers:
        - image: k8s-registry.zeusis.com:32000/heapster:v1.2.0
          name: heapster
          resources:
            # keep request = limit to keep this container in guaranteed class
            limits:
              cpu: 100m
              memory: 300Mi
            requests:
              cpu: 100m
              memory: 300Mi
          command:
            - /heapster
            - --source=kubernetes:https://kubernetes.default
            - --sink=influxdb:http://192.168.61.2:32003
        - image: k8s-registry.zeusis.com:32000/heapster:v1.2.0
          name: eventer
          resources:
            # keep request = limit to keep this container in guaranteed class
            limits:
              cpu: 100m
              memory: 300Mi
            requests:
              cpu: 100m
              memory: 300Mi
          command:
            - /eventer
            - --source=kubernetes:https://kubernetes.default
            - --sink=influxdb:http://192.168.61.2:32003
