kubeconfig/heapster-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: heapster
  namespace: monitoring
  labels:
    k8s-app: heapster
    kubernetes.io/cluster-service: "true"
    version: v1.1.0
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: heapster
      version: v1.1.0
  template:
    metadata:
      labels:
        k8s-app: heapster
        version: v1.1.0
    spec:
      containers:
        - image: k8s-registry.zeusis.com:32000/heapster:v1.2.0
          name: heapster
          resources:
            # keep request = limit to keep this container in guaranteed class
            limits:
              cpu: 100m
              memory: 300Mi
            requests:
              cpu: 100m
              memory: 300Mi
          command:
            - /heapster
            # - --source=kubernetes.summary_api:''
            - --source=kubernetes.summary_api:http://192.168.61.2:6550?inClusterConfig=false
            - --sink=influxdb:http://influxdb:8086
        - image: k8s-registry.zeusis.com:32000/heapster:v1.2.0
          name: eventer
          resources:
            # keep request = limit to keep this container in guaranteed class
            limits:
              cpu: 100m
              memory: 300Mi
            requests:
              cpu: 100m
              memory: 300Mi
          command:
            - /eventer
            # - --source=kubernetes:''
            - --source=kubernetes:http://192.168.61.2:6550?inClusterConfig=false
            - --sink=influxdb:http://influxdb:8086
